--- a/waterMark/unVisibleWaterMark/encrypt.html
+++ b/waterMark/unVisibleWaterMark/encrypt.html
@@ -64,7 +64,7 @@
             // 获取指定区域的canvas像素信息
             originalData = ctx.getImageData(0, 0, ctx.canvas.width, ctx.canvas.height);
             console.log(originalData)
-            mergeData(textData, 'B')
+            mergeData(textData, 'G')
         };
         img.src = 'https://pic4.zhimg.com/v2-3b4fc7e3a1195a081d0259246c38debc_720w.jpg?source=172ae18b';
     </script>
